--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,11 @@ button {
 .sidebar {
   background-color: #f9f9f9;
 }
+
+.tip {
+  width: 26px;
+  height: 26px;
+  position: absolute;
+  inset: 0;
+  clip-path: polygon(0 0, 100% 0, 49% 100%);
+}
